--- a/Unit10_control_flow/look-up_v2.py.ipynb
+++ b/Unit10_control_flow/look-up_v2.py.ipynb
@@ -36,8 +36,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6c50be07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter word to look up: zero\n",
+      "pie not found in dictionary\n"
+     ]
+    }
+   ],
+   "source": [
+    "def LookupDicts(word):\n",
+    "    outList = []\n",
+    "    if word in english:\n",
+    "        outList.append(f'in English: {english[word]}')\n",
+    "    if word in spanish:\n",
+    "        outList.append(f'in Spanish: {spanish[word]}')\n",
+    "    if word in french:\n",
+    "        outList.append(f'in French: {french[word]}')\n",
+    "    return outList\n",
+    "\n",
+    "outList = LookupDicts(input('enter word to look up: '))\n",
+    "    \n",
+    "    \n",
+    "# if not outList:\n",
+    "#     print(f'{word} not found in dictionary')\n",
+    "# else:\n",
+    "#     print('\\n'.join(outList))\n",
+    "    \n",
+    "print(f'{word} not found in dictionary' if not outList \\\n",
+    "     else '\\n'.join(outList))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b45769e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def leap(year):\n",
+    "    return year % 400 == 0 or \\\n",
+    "        year % 4 == 0 and year % 100 != 0\n",
+    "\n",
+    "def DaysInMonthTear(month, year):\n",
+    "    return 31 if month in {1, 3, 5, 7, 8, 10, 12} else \\\n",
+    "        30 if month in {4, 6, 9, 11} else \\\n",
+    "        28 if not leap(year) else \\\n",
+    "        29 \n",
+    "\n",
+    "print(leap(1700))\n",
+    "print(leap(1800))\n",
+    "print(leap(2000))\n",
+    "print(leap(2001))\n",
+    "print(leap(2002))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "461087e9",
    "metadata": {},
    "outputs": [],
    "source": []
