--- a/Unit10_if/look-up_v1.py.ipynb
+++ b/Unit10_if/look-up_v1.py.ipynb
@@ -29,19 +29,11 @@
     "else:\n",
     "    print(f'{word} not found in dictionary')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d001ba17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
