--- a/Unit11_loop/while-loop.ipynb
+++ b/Unit11_loop/while-loop.ipynb
@@ -238,7 +238,7 @@
     "    L = []\n",
     "    while True:\n",
     "        cmd = input('Eneter a stack operation:')\n",
-    "        words = line.split()\n",
+    "        words = cmd.split()\n",
     "        if len(words) == 0:\n",
     "            pass\n",
     "        elif words[0] == 'show':\n",
@@ -264,7 +264,7 @@
     "    L = []\n",
     "    while True:\n",
     "        cmd = input('Eneter a stack operation:')\n",
-    "        words = line.split()\n",
+    "        words = cmd.split()\n",
     "        if len(words) == 0:\n",
     "            continue\n",
     "        if words[0] == 'show':\n",
